# grotsky

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  THE_VM.md  codecov.yml  go.mod  go.sum  readme.md  syntax.ebnf  syntax.md
.github/workflows/: build_test.yml  coverage.yml  go.yml  release.yml
archive/: CHANGELOG.md
archive/internal/: exec_test.go  grotskyBool.go  grotskyClass.go  grotskyFunction.go  grotskyNumber.go  grotskyString.go  state.go
cmd/: lex.go
cmd/ast/: ast.go  ast.sh
cmd/grotsky/: main.go
examples/: class.g  exec.g  expressions.g  fib.g  first.g  math.g  statements.g  syntax_check.g  test_op.g
internal/: env.go  exec.go  exec_test.go  expr.go  function.go  grotskyBool.go  grotskyClass.go  grotskyDict.go  grotskyFunction.go  grotskyGlobals.go  grotskyList.go  grotskyNumber.go  grotskyObject.go  grotskyString.go  interp.go  lexer.go  operators.go  parser.go  reader.go  state.go  stmt.go  token.go
internal/tokens/: types.go
rewrite_in_rust/: Cargo.toml  THE_VM.md
rewrite_in_rust/src/: compiler.rs  errors.rs  expr.rs  instruction.rs  interpreter.rs  lexer.rs  main.rs  native.rs  parser.rs  state.rs  stmt.rs  token.rs  tree_interp.rs  value.rs  vm.rs
src/: compiler.rs  embed.rs  errors.rs  instruction.rs  interpreter.rs  lexer.rs  main.rs  native.rs  parser.rs  state.rs  stmt.rs  token.rs  value.rs  vm.rs
test/: comprehensive_coverage.gr  coverage_gap_closing.gr  coverage_tests.gr  expanded_coverage.gr
test/assignment/: grouping.gr
test/benchmark/: fib.gr  loop.gr  (+1 more)
tool/: analyze_coverage.py  benchmark.py  term.py  test.py
(+9 files in other folders)
