[package]
name = "grotsky-rs"
version = "0.0.19"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.190", features = ["derive"] }
socket2 = "0.5.5"
regex = "1.10.2"
pprof = { version = "0.13", features = ["flamegraph", "protobuf-codec"], optional = true }


[features]
profile = ["pprof"]

[profile.release]
debug = true
