[package]
name = "grotsky-rs"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.190", features = ["derive"] }
socket2 = "0.5.5"


[profile.release]
debug = true
